[gd_scene load_steps=7 format=3 uid="uid://dc021kjash2l2"]

[ext_resource type="Script" uid="uid://d36j15tnhn7ua" path="res://scripts/fase1/etapa4_fase1.gd" id="1_qc65o"]
[ext_resource type="PackedScene" uid="uid://8rnnbuqp0654" path="res://cenas/fase1/bot√£o_fase1.tscn" id="2_u0fa6"]
[ext_resource type="FontFile" uid="uid://clkjjfanemm5b" path="res://fonts/Silkscreen/Silkscreen-Regular.ttf" id="3_4qsjq"]
[ext_resource type="Texture2D" uid="uid://c6tn8055qfy1c" path="res://buttons/mais.png" id="4_wwssh"]
[ext_resource type="PackedScene" uid="uid://b83rhs5pm0s7u" path="res://cenas/menu-inicial/help-layer.tscn" id="5_2a2rl"]
[ext_resource type="PackedScene" uid="uid://cl04gfo4i5sy8" path="res://cenas/BotaoSair.tscn" id="6_y38o5"]

[node name="Etapa2Fase1" type="Node2D"]
script = ExtResource("1_qc65o")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(485, 280)
offset_left = -2.0
offset_top = -4.0
offset_right = 483.0
offset_bottom = 276.0
color = Color(0.3019608, 0.8235294, 0.81960785, 1)

[node name="resposta2" type="Button" parent="."]
offset_left = 382.0
offset_top = 192.0
offset_right = 390.0
offset_bottom = 200.0

[node name="resposta3" type="Button" parent="."]
offset_left = 216.0
offset_top = 180.0
offset_right = 224.0
offset_bottom = 188.0

[node name="resposta4" type="Button" parent="."]
offset_left = 77.0
offset_top = 170.0
offset_right = 85.0
offset_bottom = 178.0

[node name="Sprite1" type="Sprite2D" parent="."]
position = Vector2(90, 90)
scale = Vector2(0.06, 0.06)

[node name="Sprite2" type="Sprite2D" parent="."]
position = Vector2(242, 88)
scale = Vector2(0.06, 0.06)

[node name="Sprite3" type="Sprite2D" parent="."]
position = Vector2(394, 88)
scale = Vector2(0.06, 0.06)

[node name="OpcaoGasto" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 240.0
offset_top = 107.0
offset_right = 284.0
offset_bottom = 131.0
custo_e_gotas = 10

[node name="OpcaoGasto3" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 390.0
offset_top = 108.0
offset_right = 434.0
offset_bottom = 132.0
custo_e_gotas = 10

[node name="OpcaoGasto2" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 91.0
offset_top = 110.0
offset_right = 135.0
offset_bottom = 134.0
custo_e_gotas = 10

[node name="OpcaoGasto4" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 405.0
offset_top = 178.0
offset_right = 449.0
offset_bottom = 202.0
custo_e_gotas = 10

[node name="OpcaoGasto9" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 406.0
offset_top = 199.0
offset_right = 450.0
offset_bottom = 223.0
custo_e_gotas = 10

[node name="OpcaoGasto5" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 243.0
offset_top = 167.0
offset_right = 287.0
offset_bottom = 191.0
custo_e_gotas = 10

[node name="OpcaoGasto7" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 244.0
offset_top = 193.0
offset_right = 288.0
offset_bottom = 217.0
custo_e_gotas = 10

[node name="OpcaoGasto6" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 90.0
offset_top = 160.0
offset_right = 134.0
offset_bottom = 184.0
custo_e_gotas = 10

[node name="OpcaoGasto8" parent="." instance=ExtResource("2_u0fa6")]
offset_left = 89.0
offset_top = 183.0
offset_right = 133.0
offset_bottom = 207.0
custo_e_gotas = 10

[node name="Label" type="Label" parent="."]
offset_left = 72.0
offset_top = 105.0
offset_right = 112.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("3_4qsjq")
theme_override_font_sizes/font_size = 26
text = "10"

[node name="Label3" type="Label" parent="."]
offset_left = 96.0
offset_top = 154.0
offset_right = 136.0
offset_bottom = 188.0
theme_override_fonts/font = ExtResource("3_4qsjq")
theme_override_font_sizes/font_size = 26
text = "20"

[node name="Label4" type="Label" parent="."]
offset_left = 252.0
offset_top = 164.0
offset_right = 292.0
offset_bottom = 198.0
theme_override_fonts/font = ExtResource("3_4qsjq")
theme_override_font_sizes/font_size = 26
text = "20"

[node name="Label6" type="Label" parent="."]
offset_left = 401.0
offset_top = 176.0
offset_right = 441.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("3_4qsjq")
theme_override_font_sizes/font_size = 26
text = "20"

[node name="Label2" type="Label" parent="."]
offset_left = 219.0
offset_top = 103.0
offset_right = 259.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("3_4qsjq")
theme_override_font_sizes/font_size = 26
text = "10"

[node name="Label5" type="Label" parent="."]
offset_left = 377.0
offset_top = 106.0
offset_right = 417.0
offset_bottom = 140.0
theme_override_fonts/font = ExtResource("3_4qsjq")
theme_override_font_sizes/font_size = 26
text = "10"

[node name="Mais" type="Sprite2D" parent="."]
position = Vector2(152, 124)
texture = ExtResource("4_wwssh")

[node name="Mais2" type="Sprite2D" parent="."]
position = Vector2(312, 124)
texture = ExtResource("4_wwssh")

[node name="HelpLayer" parent="." instance=ExtResource("5_2a2rl")]

[node name="BotaoSair" parent="." instance=ExtResource("6_y38o5")]
position = Vector2(-5, 221)

[connection signal="button_down" from="resposta2" to="." method="_on_resposta_2_button_down"]
[connection signal="button_down" from="resposta3" to="." method="_on_resposta_3_button_down"]
[connection signal="button_down" from="resposta4" to="." method="_on_resposta_4_button_down"]
